welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:14: error: type mismatch;
 found   : Unit
 required: Int
      if (die1 == 6){
      ^